tests/reject/bad_equality.ul
void main() {
     boolean a;

     a = (a == "asdf");
}